# docstoteles-app

./: .env  pyproject.toml  requirements.txt
docstoteles/: app.py
docstoteles/service/: rag.py  scraping.py  scrapping.py
